// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header 正常系 ログイン済み 1`] = `
<div
  className="header"
>
  <div
    className="header__icon"
  >
    <a
      className="header__iconLink"
      href="/"
    >
      <img
        alt="素敵なお酒ライフを"
        className="header__iconImage"
        src="/logo.png"
      />
    </a>
  </div>
  <div
    className="header__login"
  >
    <a
      className="header__loginLink"
      href="/login"
    >
      <img
        alt="ログインする"
        className="header__loginIcon"
        src="/circle.svg"
      />
    </a>
  </div>
</div>
`;

exports[`Header 正常系 未ログイン 1`] = `
<div
  className="header"
>
  <div
    className="header__icon"
  >
    <a
      className="header__iconLink"
      href="/"
    >
      <img
        alt="素敵なお酒ライフを"
        className="header__iconImage"
        src="/logo.png"
      />
    </a>
  </div>
  <div
    className="header__login"
  >
    <a
      className="header__loginLink"
      href="/login"
    >
      <img
        alt="ログインする"
        className="header__loginIcon"
        src="/login.svg"
      />
    </a>
  </div>
</div>
`;
